게시글 작성, 게시글 수정 css, js, 연결

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,6 +54,19 @@ textarea {
     word-spacing: -5px;
 }
 
+textarea::placeholder, input::placeholder {
+    color: var(--grey-color);
+    font-size: var(--font-medium);
+    font-weight: var(--font-light);
+}
+
+textarea:hover,
+textarea:focus,
+input:hover,
+input:focus {
+    border: 1px solid var(--blue-light-color) !important;
+}
+
 a{
     color: #222;
     text-decoration: none;
