--- a/static/css/index.css
+++ b/static/css/index.css
@@ -52,6 +52,7 @@
 
 .original-text .title, .corrected-text .title{
     padding: calc(var(--padding)/2);
+    height: 35.5px;
     
     text-align: center;
 
@@ -66,9 +67,13 @@
 
 .original-text textarea{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 35.5px);
+
+    position: sticky;
+    top: 35.5px;
 
     border: none;
+    border-radius: 0 0 calc(var(--padding)/2) calc(var(--padding)/2);
     resize: none;
 }
 
