--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -15,9 +15,8 @@
                 <a href="{{url_for('get_post', pid=pid)}}"><i class="fa-solid fa-arrow-left"></i></a>
             </div>
         </div>
-        <textarea class="title">{{post.title}}</textarea>
-
-        <textarea class="content">{{post.content}}</textarea>
+        <textarea class="title" placeholder="제목을 입력하세요.">{{post.title}}</textarea>
+        <textarea class="content" placeholder="내용을 입력하세요.">{{post.content}}</textarea>
 
         <div class="btn-box">
             <button id="editSubmitBtn">수정</button>
