--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -5,14 +5,18 @@
 {% endblock extra_css %}
 
 {% block content %}
-    <div class="post-write">
-        post-write
-        <div id="toPostList"><a href="{{url_for('get_posts')}}">toPostList</a></div>
-        <textarea id="title"></textarea>
-        <textarea type="text" id="content"></textarea>
-        <input type="text" id="username"></input>
-        <input type="password" id="password"></input>
-        <button id="submit">submit</button>
+    <div class="post-write-container">
+        <h2>집단지성 :</h2>
+        <p>개선사항, 사용후기 등 자유롭게 글을 남겨주세요</p>
+        <textarea class="title" placeholder="제목을 입력하세요."></textarea>
+        <textarea class="content" placeholder="내용을 입력하세요."></textarea>
+        <div class="signature-box">
+            <div class="input-box">
+                <input type="text" id="username" placeholder="이름을 입력하세요.">
+                <input type="password" id="password" placeholder="비밀번호를 입력하세요.">
+            </div>
+            <button id="postSubmit">작성하기</button>
+        </div>
     </div>
 {% endblock content %}
 
