--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -141,3 +141,52 @@ td a:hover {
     color: var(--blue-light-color);
     text-decoration: underline;
 }
+
+/* 페이지네이션 */
+.pagination {
+    width: 100%;
+
+    margin: calc(var(--padding)*4) 0;
+
+    display: flex;
+    justify-content: center;
+
+    gap: calc(var(--padding)*0.5);
+}
+
+.pagination div {
+    font-size: var(--font-medium);
+    font-weight: var(--font-medium-weight);
+}
+
+.number-box {
+    display: flex;
+    justify-content: center;
+
+    border-radius: 5px;
+
+    overflow: hidden;
+}
+
+.number-box div, .prev, .next {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 30px;
+    height: 30px;
+
+    background-color: var(--grey-light-color);
+}
+
+.prev, .next {
+    border-radius: 50%;
+}
+
+.number-box div:hover, .prev:hover, .next:hover {
+    color: var(--blue-light-color);
+}
+
+.number-box div.active {
+    background-color: var(--grey-middle-color);
+}
