--- a/templates/posts.html
+++ b/templates/posts.html
@@ -37,6 +37,20 @@
                 {% endfor %}
             {% endif %}
         </table>
+        <div class="pagination">
+            {% if page > 1 %}
+                <div class="prev" data-page="{{ page - 1 }}"><i class="fa-solid fa-angle-left"></i></div>
+            {% endif %}
+            {% set total_pages = (total_count // 10) + (1 if total_count % 10 != 0 else 0) %}
+            <div class="number-box">
+                {% for i in range(1, total_pages + 1) %}
+                    <div class="{% if i == page %}active{% endif %}" data-page="{{ i }}">{{ i }}</div>
+                {% endfor %}
+            </div>
+            {% if page < total_pages %}
+                <div class="next" data-page="{{ page + 1 }}"><i class="fa-solid fa-angle-right"></i></div>
+            {% endif %}
+        </div>        
     </div>
 {% endblock content %}
 
