--- a/static/css/base.css
+++ b/static/css/base.css
@@ -71,6 +71,7 @@ a{
 
 /* Header */
 header{
+    min-width: var(--min-width);
     border-bottom: 1px solid var(--grey-middle-color);
     background-color: var(--grey-light-color);
 }
@@ -143,6 +144,8 @@ header .menu a:hover {
 
 /* Footer */
 footer{
+    min-width: var(--min-width);
+    
     border-top: 1px solid var(--grey-middle-color);
     
     color: var(--grey-dark-color);
@@ -151,6 +154,7 @@ footer{
 }
 
 .footer-container{
+    
     margin: 0 auto;
     
     display: flex;
