--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -12,7 +12,7 @@ h2 {
     color: var(--blue-dark-color);
 }
 
-p {
+.post-list-container p {
     margin-top: calc(var(--padding)*0.3);
     margin-bottom: calc(var(--padding)*1.7);
 
