자잘한 변경사항

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,7 +6,7 @@
 
     gap: var(--padding);
 
-    height: 620px;
+    height: var(--min-height);
     min-width: var(--min-width);
     max-width: var(--max-width);
 }
