--- a/static/css/post_new.css
+++ b/static/css/post_new.css
@@ -11,7 +11,7 @@ h2 {
     color: var(--blue-dark-color);
 }
 
-p {
+.post-write-container p {
     margin-top: calc(var(--padding)*0.3);
     margin-bottom: calc(var(--padding)*1.7);
 
@@ -75,6 +75,9 @@ textarea.title {
 
     border: 1px solid var(--grey-middle-color);
     border-radius: 5px;
+
+    font-size: var(--font-medium);
+    font-weight: var(--font-medium-weight);
 }
 
 #postSubmit {
