자잘한 수정(,!()...:;) combi로 한번에 묶기

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,11 @@
     <div class="content">
         <section class="function">
             <button id="grammar">맞춤법</button>
-            <button id="tilde">~</button>
-            <button id="english">(eng)</button>
+            <button id="combination">combi</button>
             <button id="quote">“ ”</button>
             <button id="smallQuote">‘ ’</button>
-            <button id="comma">,</button>
-            <button id="exclamation">!</button>
-            <button id="bracket">()</button>
             <button id="triangleBracket">〈 〉</button>
             <button id="doubleTriangleBracket">《 》</button>
-            <button id="ellipsis">…</button>
             <button id="cornerBracket">「 」</button>
             <button id="doubleCornerBracket">『 』</button>
             <button id="wrapBracket">선택( )</button>
