meta description 추가해서 검색 시 사이트 소개 나오도록 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="clean up은 전자책 제작 봉사활동을 지원하는 글자 교정 프로그램입니다. 이 프로그램은 잘못된 특수문자의 교정과 맞춤법 검사를 지원하여 전자책 제작 과정을 보다 빠르고 정확하게 만듭니다.">
     <title>clean up</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="icon" type="images/png" href="{{url_for('static', filename='image/logo.png')}}">
