r, J, j가 영어 단어일 경우 「」『』 변환 안 하도록

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,10 +17,12 @@
             <button id="cornerBracket">「 」</button>
             <button id="doubleCornerBracket">『 』</button>
             <button id="wrapBracket">선택( )</button>
-            <button id="wrapQuoteBracket">선택“ ”</button>
             <button id="wrapSmallQuoteBracket">선택‘ ’</button>
+            <button id="wrapQuoteBracket">선택“ ”</button>
             <button id="wrapTriangleBracket">선택〈 〉</button>
+            <button id="wrapTriangleBracket">선택《 》</button>
             <button id="wrapCornerBracket">선택「 」</button>
+            <button id="wrapTriangleBracket">선택『 』</button>
             
         </section>
         <section class="original-text">
