index.html id 변경 안 한 것 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
             <button id="wrapSmallQuoteBracket">선택‘ ’</button>
             <button id="wrapQuoteBracket">선택“ ”</button>
             <button id="wrapTriangleBracket">선택〈 〉</button>
-            <button id="wrapTriangleBracket">선택《 》</button>
+            <button id="wrapDoubleTriangleBracket">선택《 》</button>
             <button id="wrapCornerBracket">선택「 」</button>
-            <button id="wrapTriangleBracket">선택『 』</button>
+            <button id="wrapDoubleCornerBracket">선택『 』</button>
             
         </section>
         <section class="original-text">
