--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,8 @@
     {% endblock content %}
     <footer>
         <div class="footer-container">
-            <p>&copy; 2024 Your Company. All rights reserved.</p>
-            <p><a href="/privacy">Privacy Policy</a> | <a href="/terms">Terms of Service</a></p>
+            <p>&copy; 2024. Btongtong All rights reserved.</p>
+            <p><a href="/">Privacy Policy</a> | <a href="/">Terms of Service</a></p>
         </div>
     </footer>
 
