--- a/static/css/post_new.css
+++ b/static/css/post_new.css
@@ -39,15 +39,13 @@ textarea.title {
 /* 게시글 내용 */
 .content {
     width: 100%;
-    height: calc(var(--min-height)*0.7);
+    min-height: calc(var(--min-height)*0.7);
 
     padding: var(--padding);
     margin: calc(var(--padding)*0.5) 0;
 
     border: 1px solid var(--grey-middle-color);
     border-radius: 5px;
-
-    resize: none;
 }
 
 /* 이름, 비밀번호 및 제출 버튼 */
