--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -15,7 +15,7 @@
                 <input type="file" id="imageUpload" style="display:none;" accept="image/*">
                 <button type="button" id="imageButton" class="control-base"><i class="fa-regular fa-image"></i></button>
             </div>
-            <div class="editor" contenteditable="true"><span class="placeholder">내용을 입력하세요.</span></div>
+            <div class="editor" contenteditable="true"><p class="placeholder">글을 작성해주세요.</p></div>
         </div>
 
         <div class="signature-box">
