--- a/templates/post.html
+++ b/templates/post.html
@@ -24,7 +24,7 @@
         <h2 class="title">{{post.title}}</h2>
 
         <div class="post-content">
-            {{post.content}}
+            {{post.content|safe}}
         </div>
 
         <div class="comment-write">
