--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,6 +98,11 @@ header .logo {
     font-weight: 1000;
 
     color: var(--blue-dark-color);
+    cursor: pointer;
+}
+
+header .logo:hover {
+    color: var(--blue-light-color);
 }
 
 header .logo i{
