refactor: extract error messages into a separate object

--- a/templates/post.html
+++ b/templates/post.html
@@ -62,5 +62,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="{{ url_for('static', filename='js/post.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/post.js') }}"></script>
 {% endblock extra_js %}
