--- a/templates/index.html
+++ b/templates/index.html
@@ -45,5 +45,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock extra_js %}
