--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -29,5 +29,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="{{ url_for('static', filename='js/post_new.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/post_new.js') }}"></script>
 {% endblock extra_js %}
