--- a/templates/posts.html
+++ b/templates/posts.html
@@ -55,5 +55,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="{{ url_for('static', filename='js/posts.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/posts.js') }}"></script>
 {% endblock extra_js %}
