--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
         <section class="function">
             <button id="grammar">맞춤법</button>
             <button id="combination">combi</button>
-            <button id="smallQuote">‘ ’</button>
-            <button id="quote">“ ”</button>
+            <button id="smallQuoteBracket">‘ ’</button>
+            <button id="quoteBracket">“ ”</button>
             <button id="triangleBracket">〈 〉</button>
             <button id="doubleTriangleBracket">《 》</button>
             <button id="cornerBracket">「 」</button>
             <button id="doubleCornerBracket">『 』</button>
-            <button id="wrapBracket">선택( )</button>
+            <button id="wrapRegularBracket">선택( )</button>
             <button id="wrapSmallQuoteBracket">선택‘ ’</button>
             <button id="wrapQuoteBracket">선택“ ”</button>
             <button id="wrapTriangleBracket">선택〈 〉</button>
